<resources>
    <string name="app_name">Organisasi Mahasiswa</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="header_login">Sign in</string>
    <string name="header_desc_login">Sign in to get all the feature of this app</string>
    <string name="hint_password">Password</string>
    <string name="button_text_login">SIGN IN</string>
    <string name="button_text_I_dont_have_account">I dont have account</string>
    <string name="error_password_not_valid">Password is not valid !</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="button_text_ok">Ok</string>
    <string name="hint_login_email_edit_text">Email</string>
    <string name="hint_register_email">Email</string>
    <string name="hint_register_password">Password</string>
    <string name="button_text_register">Create Account</string>
    <string name="hint_register_name">Name</string>
    <string name="header_register">Sign Up</string>
    <string name="header_desc_register">create an account to get all the feature of this app</string>
    <string name="button_text_back">Back</string>
    <string name="error_name_not_valid">Name is not valid</string>
    <string name="error_email_not_valid">Email is not valid</string>
    <string name="hint_register_password_confirm">Password Confirmation</string>
    <string name="dashboard">Home</string>
    <string name="categories">Event</string>
    <string name="dialog_camera">Pilih Gambar</string>
    <string name="dialog_body_camera">Camera yang digunakan merupakan versi CameraX</string>
    <string name="upload_image">Upload Gambar</string>
    <string name="hint_keterangan_foto">Keterangan Gambar</string>
    <string name="keterangan_error">Keterangan gambar tidak boleh kosong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="event">My Events</string>
    <string name="notification">Notifikasi</string>
    <string name="scan">Pemindai</string>
    <string name="profile">Profil</string>
    <string name="search_here">Apa yang anda cari?</string>
    <string name="your_search_history">History pencarian</string>
    <string name="recently_viewed">" Baru saja dilihat"</string>
    <string name="search">Search</string>
    <string name="msg_token_fmt">token</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="nama_kegiatan">Ormawa</string>
    <string name="deskripsi_kegiatan">diskripsi</string>
    <string name="tempat_kegiatan">Gedung A Lantai 3 Ruangan 1</string>
    <string name="hint_login_username_edit_text">Username</string>
    <string name="belummemiliki">Apakah anda belum memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="daftarkegiatan">Daftar Kegiatan</string>
    <string name="judulkegiatan">Seminar</string>
    <string name="harikegiatan">Sabtu</string>
    <string name="tgl_kegiatan">18-Maret-2023</string>
    <string name="batalikut">Batal Daftar</string>
    <string name="diskripsi">Organisasi kemahasiswaan merupakan wadah bagi mahasiswa untuk mengembangkan kapasitas kemahasiswaannya berupa aspirasi, inisiasi, atau gagasan-gagasan positif dan kreatif melalui berbagai kwgiatan yang relafan dengan tujuan pendidikan nasional serta visi dan misi institut perguruan tinggi itu sendiri yang bekerja</string>
    <string name="ikutikegiatan">Ikuti Kegiatan</string>
</resources>