<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/padding_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/ic_baseline_arrow_back_24"
            android:textSize="@dimen/text_size_small"
            android:text="@string/button_text_back"
            android:id="@+id/back_button"
            android:layout_height="wrap_content"/>


        <TextView

            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            android:text="@string/header_login"
            android:fontFamily="sans-serif-medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/header_desc_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_medium"
            android:id="@+id/loading_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_bar_height"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:id="@+id/email_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/email_edit_text"
                android:hint="@string/hint_login_username_edit_text"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/password_input"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:id="@+id/password_edit_text"
                android:hint="@string/hint_password"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/login_button"
            android:text="@string/button_text_login"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/button_text_I_dont_have_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/prediksi_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="gas saja prediksi " />
    </LinearLayout>
</RelativeLayout>