<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.dashboard.kegiatan.DetailKegiatan.DetailKegiatanActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/ic_baseline_keyboard_backspace_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/heebo_medium"
            android:gravity="center"
            android:text="@string/daftarkegiatan"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ditailkegiatan_img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:elevation="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/no_image"
            app:riv_corner_radius="10dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/judul_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/heebo_medium"
        android:gravity="center"
        android:text="@string/judulkegiatan"
        android:textColor="@color/black"
        android:textSize="20sp"

        app:layout_constraintEnd_toStartOf="@+id/favorite_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageView
        android:id="@+id/favorite_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_love_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"

        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/tempat_kegiatan_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="5dp"
        android:fontFamily="@font/heebo_regular"
        android:text="@string/tempat_kegiatan"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul_tv" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempat_kegiatan_tv">


        <TextView
            android:id="@+id/hari_kegiatan_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/white_btn_background"
            android:fontFamily="@font/heebo_regular"
            android:padding="5dp"
            android:text="@string/harikegiatan"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tgl_kegiatan_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_btn_background"
            android:fontFamily="@font/heebo_regular"
            android:padding="5dp"
            android:text="@string/tgl_kegiatan"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/daftarkegiatan_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/bg_discount_small"
            android:fontFamily="@font/heebo_extrabold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ikutikegiatan"

            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/diskripsi_kegiatan_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:justificationMode="inter_word"
        android:text="@string/diskripsi"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/linear1" />

</androidx.constraintlayout.widget.ConstraintLayout>