<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="18sp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/inter_semibold"
            android:textColor="@color/black"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:textCursorDrawable="@null"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="31dp"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_here"
            android:textColorHint="#546E7A"
            android:fontFamily="@font/inter_regular"
            app:queryBackground="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:layout_marginEnd="31dp"
            android:imeOptions="actionSearch|flagNoExtractUi|flagNoFullscreen"
            android:autofillHints=""
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="22dp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/search_here"
            android:inputType="textFilter"
            android:maxLines="1"
            android:minLines="1"
            android:paddingStart="22dp"
            android:paddingEnd="31dp"
            android:textColorHint="#546E7A"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <ImageView-->
<!--            android:id="@+id/img_clear_search"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="15dp"-->
<!--            android:src="@drawable/ic_close_outline"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/search_view"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/search_view"-->
<!--            app:layout_constraintTop_toTopOf="@+id/search_view"-->
<!--            android:contentDescription="TODO" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_regular"
        android:textSize="14sp"
        android:text="@string/your_search_history"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_regular"
        android:textSize="14sp"
        android:text="@string/recently_viewed"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        />
    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recently"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="28dp"
        android:paddingStart="19dp"
        android:paddingBottom="8dp"
        tools:listitem="@layout/item_search_recently_viewed"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />


</LinearLayout>