<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:cardElevation="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small"
        >
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:src="@drawable/dummy_deals"
            android:scaleType="center"
            app:riv_corner_radius="8dp"
            android:id="@+id/kegiatan_imageview"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            >
            <TextView
                android:id="@+id/nama_kegiatan_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_kegiatan"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_medium"
                android:layout_marginTop="4dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:id="@+id/diskripsi_kegiatan_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi_kegiatan"
                    android:textColor="@color/black"
                    android:maxLines="2"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="11sp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_yellow_star"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(1k+)"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="11sp"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_outline"
                    />
                <TextView
                    android:id="@+id/tempat_kegiatan_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempat_kegiatan"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/black"
                    android:layout_marginStart="6dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="18dp"
                >
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_discount_small"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/inter_semibold"
                        android:text="10%"
                        android:textColor="@color/color_red"
                        android:textSize="8sp" />

                </RelativeLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    >

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/color_grey"
                        app:layout_constraintTop_toTopOf="@id/tv_discount"
                        app:layout_constraintEnd_toEndOf="@id/tv_discount"
                        app:layout_constraintBottom_toBottomOf="@id/tv_discount"
                        app:layout_constraintStart_toStartOf="@id/tv_discount"
                        />

                    <TextView
                        android:id="@+id/tv_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rp. 100.000"
                        android:textColor="#545454"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBaseline_toBottomOf="parent"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp.150.000"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_semibold"
                    android:layout_marginStart="8dp"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_love_outline"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>